Fix graph-data slide

--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -526,6 +526,11 @@ WHERE {
 							<img src="images/layout_circular.png" alt="" />
 						</div>
 					</div>
+					<p class="mt30" style="text-align: right;">
+						<small>
+							<a href="http://qiita.com/keiono/items/c9d31ddb0beeea9af840" target="_blank">http://qiita.com/keiono/items/c9d31ddb0beeea9af840</a>
+						</small>
+					</p>
 				</section>
 
 				<section id="p27" class="pageBlock">
@@ -535,9 +540,9 @@ WHERE {
 							<h4>JavaScriptライブラリ</h4>
 							<ul class="lgList">
 								<li><a href="https://d3js.org/" target="_blank">d3.js</a></li>
-								<li><a href="http://js.cytoscape.org/" target="_blank">cytoscape.js</a></li>
-								<li><a href="https://philogb.github.io/jit/" target="_blank">JIT</a></li>
-								<li><a href="http://getspringy.com/" target="_blank">springy</a></li>
+								<li><a href="http://js.cytoscape.org/" target="_blank">Cytoscape.js</a></li>
+								<li><a href="https://philogb.github.io/jit/" target="_blank">JIT(Javascript infovis toolkit)</a></li>
+								<li><a href="http://getspringy.com/" target="_blank">Springy.js</a></li>
 							</ul>
 						</div>
 						<div class="colRight">
