--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -447,7 +447,13 @@ MATCH n = (a{name: 'A'})-[:rel*]->(b{name: 'E'}) RETURN COUNT(n)
 					<h2>RDFをデータベースに入れる</h2>
 					<ul>
 						<li>データベースはトリプルストアとも呼ばれる</li>
-						<li>Virtuoso / Oracle / Apache Jena Fuseki / etc...</li>
+						<li>
+							<a href="https://virtuoso.openlinksw.com/" target="_blank">Virtuoso</a>
+							/
+							Oracle
+							/
+							<a href="https://jena.apache.org/documentation/serving_data/" target="_blank">Apache Jena Fuseki</a>
+							/ etc...</li>
 						<li>検索APIはSPARQLエンドポイントと呼んだりする</li>
 					</ul>
 					<div class="mt30">
