--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -450,7 +450,7 @@ MATCH n = (a{name: 'A'})-[:rel*]->(b{name: 'E'}) RETURN COUNT(n)
 						<li>
 							<a href="https://virtuoso.openlinksw.com/" target="_blank">Virtuoso</a>
 							/
-							Oracle
+							<a href="http://www.oracle.com/technetwork/database/options/semantic-tech/index.html" target="_blank">Oracle</a>
 							/
 							<a href="https://jena.apache.org/documentation/serving_data/" target="_blank">Apache Jena Fuseki</a>
 							/ etc...</li>
