Update graph-data slide

--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -533,9 +533,7 @@ WHERE {
 						</div>
 					</div>
 					<p class="mt30" style="text-align: right;">
-						<small>
-							<a href="http://qiita.com/keiono/items/c9d31ddb0beeea9af840" target="_blank">http://qiita.com/keiono/items/c9d31ddb0beeea9af840</a>
-						</small>
+						他にもありますが、だいたいこのへんに落ち着くことが多いです。
 					</p>
 				</section>
 
@@ -559,6 +557,9 @@ WHERE {
 							</ul>
 						</div>
 					</div>
+					<p class="mt30" style="text-align: right;">
+						これも他にもたくさんありますが、使ったことがあって紹介したいものはこんなところです。
+					</p>
 				</section>
 
 				<section id="p28" class="pageBlock">
