Update graph-data slide

--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -219,7 +219,7 @@
 							<li>Cypher Queryというものでデータの検索・操作をする</li>
 							<li>
 								主要な言語のドライバが存在する<br />
-								公式ドライバ：Javascript/Java/.NET/Python<br />
+								公式ドライバ：JavaScript/Java/.NET/Python<br />
 								他はコミュニティでの開発
 							</li>
 						</ul>
@@ -244,6 +244,10 @@
 							<br />
 							<a href="https://medium.com/@c_z/「パナマ文書」解析の技術的側面-d10201bbe195#.8gbo4jc8n" target="_blank">
 								https://medium.com/@c_z/「パナマ文書」解析の技術的側面-d10201bbe195#.8gbo4jc8n
+							</a>
+							<br />
+							<a href="https://neo4j.com/blog/analyzing-panama-papers-neo4j/" target="_blank">
+								https://neo4j.com/blog/analyzing-panama-papers-neo4j/
 							</a>
 						</small>
 					</p>
