Update frontend slide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,7 +158,7 @@
 				</section><!--/#p8-->
 
 				<section id="p9">
-					<h1 class="pageHeader pageHeader-if"><a href="http://inside-frontend.com/" target="_blank">INSIDE FRONTEND</a></h1>
+					<h1 class="pageHeader pageHeader-if">INSIDE FRONTEND</h1>
 					<h4 class="mt20">2017.02.25<br />Yahoo! JAPAN（東京ガーデンテラス紀尾井町）</h4>
 					<div class="mt30 clearfix">
 						<div class="colLeft" style="text-align: center;"><img src="./images/fig04.png" width="284" height="380" alt="" /></div>
