Update js-api slide [WIP]

--- a/js-api/index.html
+++ b/js-api/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>グラフ構造データを扱う</title>
+	<title>JavaScript＋HTML5 API でできること2017</title>
 
 	<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 	<meta name="author" content="Hakim El Hattab">
@@ -38,7 +38,7 @@
 					<div class="midBlock">
 						<h1 class="slideTitle" style="text-align: left;">JavaScript＋HTML5 API でできること2017</h1>
 						<h4 class="mt50 slideTitle" style="text-align: left;">
-							<a href="https://rawcode.net/">Yu Watanabe(@yuw27b)</a><br />2017.05.20 【NDSiN#12×Niigata.js×C4N】JavaScript 2017春
+							<a href="http://rawcode.net/">Yu Watanabe(@yuw27b)</a><br />2017.05.20 【NDSiN#12×Niigata.js×C4N】JavaScript 2017春
 						</h4>
 					</div>
 				</section>
@@ -71,6 +71,38 @@
 						</div>
 					</div>
 					<p style="text-align: right;"><small>・・・などをやっています。</small></p>
+				</section>
+
+				<section id="p3" class="pageBlock">
+					<h2>APIって・・・？</h2>
+					<h3 class="mt30">Application Programing Interface</h3>
+					<p>ソフトウェアコンポーネントが互いにやりとりするのに使用するインタフェースの仕様</p>
+					<p style="text-align: right;">
+						<small><a href="https://ja.wikipedia.org/wiki/アプリケーションプログラミングインタフェース" target="_blank">https://ja.wikipedia.org/wiki/アプリケーションプログラミングインタフェース</a></small>
+					</p>
+					<div class="mt30">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+					<div class="mt30">
+						<strong>JavaScript</strong>と、JavaScriptを実行する<strong>ブラウザ</strong>がやりとりするための仕様
+					</div>
+					<!--<img>-->
+				</section>
+
+				<section id="p4" class="pageBlock">
+					<h2>具体的にどんなもの？</h2>
+					<ul class="mt50" style="text-align: left;">
+						<li>DOM APIとかXMLHttpRequestとか</li>
+						<li>
+							ブラウザによって実装状況に差がある<br />
+							<small>例えばjQueryは、ブラウザごとのDOM APIの実装の差異を吸収してくれていた</small>
+						</li>
+					</ul>
+					<!--
+					ツリー構造の図にする
+					https://developer.mozilla.org/ja/docs/Web/Reference/API
+					https://developer.mozilla.org/ja/docs/Web/API
+					-->
 				</section>
 
 			</div><!--/.slides-->
