--- a/css-pattern/index.html
+++ b/css-pattern/index.html
@@ -38,21 +38,15 @@
 
 				<section id="p2" class="pageBlock">
 					<h2>自己紹介</h2>
-					<h4>
-						<span class="p2_place">ECサイト運営<br /><small>[東京]</small></span>
-						<i class="fa fa-truck fa-flip-horizontal" aria-hidden="true"></i>
-						<span class="p2_place">非常勤エンジニア＋フリーランス<br /><small>[新潟]</small></span>
-					</h4>
-					<hr />
-					<h4 class="mt20">お仕事</h4>
-					<div style="text-align: left;">
+					<h4 class="mt20">お仕事<br />非常勤エンジニア＋フリーランス</h4>
+					<div class="mt50" style="text-align: left;">
 						<h5 class="mt10">SPA＋API＋DBなWebサービスの制作</h5>
 						<ul class="mt10">
 							<li>React</li>
 							<li>Node.js/Ruby/PHP</li>
 							<li>MySQL/Neo4j/RDF</li>
 						</ul>
-						<div class="mt20">
+						<div class="mt50">
 							<h5>HTML＋CSS＋JavaScriptのコーディング</h5>
 						</div>
 					</div>
@@ -61,48 +55,46 @@
 
 				<section id="p3" class="pageBlock">
 					<div class="midBlock">
-						<h2>CSS好きですか？</h2>
+						<h1>CSS好きですか？</h1>
 					</div>
 				</section>
 
 				<section id="p4" class="pageBlock">
-					<div class="midBlock">
-						<h2>CSS好きですか？</h2>
-					</div>
+					<h3 style="text-align: left;">CSSに特化している人はほとんどいない</h3>
+					<ul class="mt30">
+						<li>そもそもプログラミング言語なのか・・・？</li>
+						<li>エンジニアさんにとって：クラスもスコープも型もないカオス</li>
+						<li>デザイナーさんにとって：CSSの書き方はデザインの本質とは無関係</li>
+					</ul>
+					<h4 style="text-align: right" class="mt50">でもHTMLを装飾する方法はCSSしかありません</h4>
 				</section>
 
 				<section id="p5" class="pageBlock">
-					<h2> - 好きじゃない人が多そうです</h2>
-					<ul class="mt30">
-						<li>エンジニアさんにとって：クラスもスコープも型もないカオス</li>
-						<li>デザイナーさんにとって：CSSの書き方はデザインの本質とは無関係</li>
+					<h2>書かずに済ませるというアプローチ</h2>
+					<h3 class="mt50">フレームワークを利用する</h3>
+					<div class="mt30">
+						<p>例えばBootstrap・・・</p>
+					</div>
+					<ul>
+						<li>bootstrap.min.css・・・121kb</li>
+						<li>
+							レールから外れるのは難しい<br />
+							<img>
+						</li>
 					</ul>
-					<h3 class="mt30">でもHTMLを装飾する方法はCSSしかありません</h3>
+					<p class="mt30">フレームワークが有用なケースもそうでないケースもある</p>
 				</section>
 
 				<section id="p6" class="pageBlock">
-					<h2> - 好きじゃない人が多そうです</h2>
-					<ul class="mt30">
-						<li>エンジニアさんにとって：クラスもスコープも型もないカオス</li>
-						<li>デザイナーさんにとって：CSSの書き方はデザインの本質とは無関係</li>
-					</ul>
-					<h3 class="mt30">でもHTMLを装飾する方法はCSSしかありません</h3>
-				</section>
-
-				<section id="p7" class="pageBlock">
-					<h2>書かずに済ませるアプローチ</h2>
-					<h3 class="mt30">フレームワークを利用する</h3>
-					<ul>
-						<li>bootstrap.min.css・・・121kb</li>
-						<li>できることには限界がある・・・5カラムのレイアウトは無理</li>
-					</ul>
-					<h3 class="mt30">自動で生成できないの？</h3>
+					<h2>書かずに済ませるというアプローチ</h2>
+					<h3 class="mt50">自動で生成できないの？</h3>
 					<ul>
 						<li>Adobe Muse</li>
 					</ul>
+					<p class="mt30">もうちょっと賢くなってくれたら・・・</p>
 				</section>
 
-				<section id="p8" class="pageBlock">
+				<section id="p7" class="pageBlock">
 					<h2>人間がCSSを書くお仕事は健在です</h2>
 					<p style="text-align: left;">
 						デザインカンプをもらって画像をスライス、HTML＋CSSを書くあれです。<br />
@@ -111,88 +103,106 @@
 					<ul style="text-align: left;">
 						<li>直接のクライアントは制作会社。納品後のちょっとした変更や更新などはそこの人がやる。</li>
 						<li>レスポンシブとかスマートフォンサイトが半分以上。</li>
-						<li>時間的に余裕がないケース、デザインデータが五月雨式で来るケースも</li>
+						<li>時間的に余裕がないケース、デザインデータが五月雨式で来るケースも。</li>
 					</ul>
-					<h3 class="mt30"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> 品質と作業効率をできるだけ両立させたい！</h3>
+					<h3 class="mt30">
+						<i class="fa fa-arrow-circle-right" aria-hidden="true"></i> 品質と作業効率
+					</h3>
 				</section>
 
-				<section id="p9" class="pageBlock">
-					<h2>品質の良いCSS</h2>
-					<ul class="mt30" style="text-align: left;">
-						<li>メンテナンスしやすい（=壊れにくい)</li>
-						<li>読みやすい</li>
+				<section id="p8" class="pageBlock">
+					<h2>CSSの新しい機能を取り入れる</h2>
+					<ul>
 						<li>HTMLに無意味なdivを作らない</li>
 						<li>装飾になるべく画像を使わない</li>
 					</ul>
+					<img><!--example-->
+				</section>
+
+				<section id="p9">
+					<h2>全体の設計を考える</h2>
+					<h3>レゴブロックにしたかったけど・・・</h3>
+					<p>クラスの組み合わせで作っていく方法は、デザインの段階からそれを想定していないと非常に難しい。</p>
+					<p>うまくいけば非常に技巧的な、記述量の少ないCSSが組めると思うが、それを求められることはほとんどない。</p>
+					<p>現実のクライアントワークには合わなかった。</p>
 				</section>
 
 				<section id="p10" class="pageBlock">
-					<h2>作業効率の良いCSSコーディング</h2>
-					<ul class="mt30" style="text-align: left;">
-						<li>なるべく手戻りせずに書く</li>
-						<li>手を止めて考える時間を減らす</li>
-						<li>読みやすい（共通）</li>
-					</ul>
-				</section>
-
-				<section id="p11" class="pageBlock">
-					<h2>解決策1：設計手法を導入</h2>
+					<h2>BEMとの出会い</h2>
 					<h3>MindBEMding</h3>
 					<p>BEMという設計手法を多少柔軟にしたもの。</p>
 					<img>
-					<p class="text-align: right;">壊れにくい、考える時間、読みやすい、を解決</p>
+				</section>
+
+				<section id="p11" class="pageBlock">
+					<h2>BEM</h2>
+					<h3>メリット</h3>
+					<ul>
+						<li>擬似的に名前空間ができるので、安心。</li>
+						<li>クラス名をつけるときに迷わない</li>
+						<li>読みやすい</li>
+						<li>マルチクラスになることがあまりないので、上書き合戦にならない。=変更に強い</li>
+					</ul>
 				</section>
 
 				<section id="p12" class="pageBlock">
-					<h2>解決策1：設計手法を導入</h2>
-					<h3>BEM vs OOCSS</h3>
+					<h2>設計手法は他にもいろいろあります</h2>
 				</section>
 
 				<section id="p13" class="pageBlock">
-					<h2>解決策1：設計手法を導入</h2>
-					<h3>設計手法はいろいろあります</h3>
-					<p>部分的にOOCSSを使うことも</p>
+					<h2>ECSS（的アプローチ）</h2>
+					<h3>ECSSとは</h3>
+					<img>
+					<p>ECSSそのものではなく、「重複してもいい」という考え方を導入した</p>
 				</section>
 
 				<section id="p14" class="pageBlock">
-					<h2>解決策2：ある程度の重複は許容する</h2>
-					<h3>ECSS的アプローチ</h3>
-					<ul class="mt30">
-						<li>似たようなものでもどんどんコピペ。捨てやすい、変更しやすい！</li>
-						<li>具体例（似たデザインのコピペとModifierの比較。どちらかが不要になったときにどうする？）</li>
+					<h2>ECSS（的アプローチ）</h2>
+					<img><!--例-->
+					<ul>
+						<li>
+							BEMで分割した各ブロックが、共通コードに依存することがない<br />
+							各ブロックは疎結合
+						</li>
+						<li>
+							「他のページに似たようなのあったから共通部分をまず定義して・・・」と考える必要がないので、どんどん手を動かせる。
+						</li>
+						<li>
+							これを変更したら他の部分にも影響があるかも・・・という心配もない。
+						</li>
 					</ul>
-					<p class="text-align: right;">考える時間、手戻りの減少</p>
 				</section>
 
 				<section id="p15" class="pageBlock">
-					<h2>解決策2：ある程度の重複は許容する</h2>
-					<h3>重複が多いと品質が下がるのでは？</h3>
+					<p>
+						※なんども出てくる見出しや、色がちがうだけ、みたいなものはさすがに重複させない。
+					</p>
+					<img>
+				</section>
+
+				<section id="p16" class="pageBlock">
+					<h2>ECSS（的アプローチ）</h2>
+					<h3>CSSファイルが肥大化しませんか・・・？</h3>
 					<ul class="mt30">
 						<li>CSSファイルの容量について</li>
 						<li>CSSのパース速度について</li>
 					</ul>
 				</section>
 
-				<section id="p16" class="pageBlock">
-					<h2>解決策3：よく使う「ブロック」をストック</h2>
+				<section id="p17" class="pageBlock">
+					<h2>よく使う「ブロック」をストック</h2>
 					<ul class="mt30">
 						<li>BEMでブロックに分割した</li>
-						<li>重複を気にしないので</li>
+						<li>各ブロックは疎結合</li>
 					</ul>
 					<h3 class="mt30"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> よく使うブロックをストックしておいて、コピペして使う</h3>
 				</section>
 
-				<section id="p17" class="pageBlock">
-					<h2>解決策3：よく使う「ブロック」をストック</h2>
-					<img><!--screenshot-->
-					<p>良かったら何かにお役立てください</p>
-				</section>
-
 				<section id="p18" class="pageBlock">
-					<h2>Webアプリへの応用</h2>
-					<h3>CSSinJSとかCSS modulesを導入する場合</h3>
-					<img>
-					<p>CSSのブロックをJSのコンポーネントより細かい粒度にしておけば、いつでもコンポーネントに分割できる。</p>
+					<h2>よく使う「ブロック」をストック</h2>
+					<img><!--screenshot-->
+					<p>スタイルガイドジェネレータが便利</p>
+					<p>良かったら何かにお役立てください</p>
 				</section>
 
 				<section id="p19" class="pageBlock">
@@ -210,7 +220,7 @@
 
 				<section id="p20" class="pageBlock">
 					<div class="midBlock">
-						<h2>AIに仕事を取られる日までは、ENJOY CSS!</h2>
+						<h2>（AIに仕事を取られる日まで）ENJOY CSS!</h2>
 					</div>
 				</section>
 
@@ -235,7 +245,7 @@
 				overview: false,
 				center: false,
 				touch: true,
-				transitionSpeed: 'fast',
+				transition: 'none',
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
