--- a/css-pattern/index.html
+++ b/css-pattern/index.html
@@ -60,7 +60,7 @@
 				</section>
 
 				<section id="p4" class="pageBlock">
-					<h3 style="text-align: left;">CSSに特化している人はほとんどいない</h3>
+					<h3 style="text-align: left;">CSSは敬遠されがち・・・</h3>
 					<ul class="mt30">
 						<li>そもそもプログラミング言語なのか・・・？</li>
 						<li>エンジニアさんにとって：クラスもスコープも型もないカオス</li>
@@ -78,11 +78,11 @@
 					<ul>
 						<li>bootstrap.min.css・・・121kb</li>
 						<li>
-							レールから外れるのは難しい<br />
+							5分割したい、なんて場合には自分でCSSを書き足さないと無理<br />
 							<img>
 						</li>
 					</ul>
-					<p class="mt30">フレームワークが有用なケースもそうでないケースもある</p>
+					<p class="mt30">フレームワークだけで全てが解決できるわけではない</p>
 				</section>
 
 				<section id="p6" class="pageBlock">
@@ -91,142 +91,118 @@
 					<ul>
 						<li>Adobe Muse</li>
 					</ul>
-					<p class="mt30">もうちょっと賢くなってくれたら・・・</p>
+					<p class="mt30">人間が読むものではなさそう・・・</p>
 				</section>
 
 				<section id="p7" class="pageBlock">
+					<p><small>というわけで、</small></p>
 					<h2>人間がCSSを書くお仕事は健在です</h2>
 					<p style="text-align: left;">
-						デザインカンプをもらって画像をスライス、HTML＋CSSを書くあれです。<br />
+						デザインカンプをもらって画像をスライス、HTMLとCSSを書くあれです。<br />
 						ここ3年で100サイトはやりました。
 					</p>
-					<ul style="text-align: left;">
-						<li>直接のクライアントは制作会社。納品後のちょっとした変更や更新などはそこの人がやる。</li>
-						<li>レスポンシブとかスマートフォンサイトが半分以上。</li>
-						<li>時間的に余裕がないケース、デザインデータが五月雨式で来るケースも。</li>
-					</ul>
 					<h3 class="mt30">
-						<i class="fa fa-arrow-circle-right" aria-hidden="true"></i> 品質と作業効率
+						<i class="fa fa-arrow-circle-right" aria-hidden="true"></i> 品質と作業効率を程よく両立できるようになってきた
 					</h3>
 				</section>
 
 				<section id="p8" class="pageBlock">
 					<h2>CSSの新しい機能を取り入れる</h2>
 					<ul>
-						<li>HTMLに無意味なdivを作らない</li>
-						<li>装飾になるべく画像を使わない</li>
+						<li>HTMLに無意味なdivを作らずに済む</li>
+						<li>装飾用の画像の減少（特にスマートフォンサイトに有効）</li>
 					</ul>
 					<img><!--example-->
 				</section>
 
 				<section id="p9">
-					<h2>全体の設計を考える</h2>
-					<h3>レゴブロックにしたかったけど・・・</h3>
+					<h2>変更に強いCSS</h2>
+					<ul>
+						<li>クライアント（制作会社）が後から追加や修正を行うことがある</li>
+						<li>3ヶ月後の自分は他人である・・・</li>
+					</ul>
+					<p>読みやすい：クラス名からデザイン上のどの部分用のコードか分かる</p>
+					<p>編集しやすい：一箇所変えたら、他のところが崩れた！、とならない</p>
+				</section>
+
+				<section id="p10">
+					<h2>全体を貫く設計方針が必要</h2>
+					<img><!--OOCSS example-->
 					<p>クラスの組み合わせで作っていく方法は、デザインの段階からそれを想定していないと非常に難しい。</p>
 					<p>うまくいけば非常に技巧的な、記述量の少ないCSSが組めると思うが、それを求められることはほとんどない。</p>
 					<p>現実のクライアントワークには合わなかった。</p>
 				</section>
 
-				<section id="p10" class="pageBlock">
+				<section id="p11" class="pageBlock">
 					<h2>BEMとの出会い</h2>
+					BEM概要
 					<h3>MindBEMding</h3>
 					<p>BEMという設計手法を多少柔軟にしたもの。</p>
 					<img>
 				</section>
 
-				<section id="p11" class="pageBlock">
-					<h2>BEM</h2>
-					<h3>メリット</h3>
-					<ul>
-						<li>擬似的に名前空間ができるので、安心。</li>
-						<li>クラス名をつけるときに迷わない</li>
-						<li>読みやすい</li>
-						<li>マルチクラスになることがあまりないので、上書き合戦にならない。=変更に強い</li>
-					</ul>
-				</section>
-
 				<section id="p12" class="pageBlock">
-					<h2>設計手法は他にもいろいろあります</h2>
+					<h2>BEM</h2>
+					<!--EXAMPLE(screenshot)-->
+					クラス名に悩まなくなった
+					最初にブロック分割を考えることで、全体を見渡しながら作業できるようになった
+					各ブロックは、ブロック外とカスケーディングすることがなく疎結合→壊れにくい（図:text-redみたいなの）
 				</section>
 
 				<section id="p13" class="pageBlock">
-					<h2>ECSS（的アプローチ）</h2>
-					<h3>ECSSとは</h3>
-					<img>
-					<p>ECSSそのものではなく、「重複してもいい」という考え方を導入した</p>
+					<h2>設計手法は他にもいろいろあります</h2>
+					<ul></ul>
+					ブロック（モジュール/コンポーネントなどと呼ぶことも）に分割して、擬似的に名前空間を作り出す、それらを疎結合にする
+					クラスの命名規則を設定する、
+					といったあたりはどれも共通です。
 				</section>
 
 				<section id="p14" class="pageBlock">
-					<h2>ECSS（的アプローチ）</h2>
-					<img><!--例-->
-					<ul>
-						<li>
-							BEMで分割した各ブロックが、共通コードに依存することがない<br />
-							各ブロックは疎結合
-						</li>
-						<li>
-							「他のページに似たようなのあったから共通部分をまず定義して・・・」と考える必要がないので、どんどん手を動かせる。
-						</li>
-						<li>
-							これを変更したら他の部分にも影響があるかも・・・という心配もない。
-						</li>
-					</ul>
+					<h2>ECSSとの出会い</h2>
+					<h3>ECSSとは</h3>
+					<img>
+					<p>「重複してもいい」と断言する姿勢に感動した</p>
 				</section>
 
 				<section id="p15" class="pageBlock">
-					<p>
-						※なんども出てくる見出しや、色がちがうだけ、みたいなものはさすがに重複させない。
-					</p>
-					<img>
+					<h2>ECSS（的アプローチ）</h2>
+					<img><!--例-->
+					<ul>
+						<li>「他のページに似たようなのあったから共通部分をまず取り出してModifierに・・・」と考えるのをやめた。</li>
+						<li>どんどん別ブロックを定義</li>
+						<li>これを変更したら他の部分にも影響があるかも・・・という心配もない。</li>
+					</ul>
+					<p>Q. CSSファイルが肥大化しませんか・・・？</p>
 				</section>
 
 				<section id="p16" class="pageBlock">
-					<h2>ECSS（的アプローチ）</h2>
-					<h3>CSSファイルが肥大化しませんか・・・？</h3>
-					<ul class="mt30">
-						<li>CSSファイルの容量について</li>
-						<li>CSSのパース速度について</li>
-					</ul>
-				</section>
-
-				<section id="p17" class="pageBlock">
 					<h2>よく使う「ブロック」をストック</h2>
 					<ul class="mt30">
-						<li>BEMでブロックに分割した</li>
+						<li>ブロックに分割した</li>
 						<li>各ブロックは疎結合</li>
 					</ul>
-					<h3 class="mt30"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> よく使うブロックをストックしておいて、コピペして使う</h3>
-				</section>
-
-				<section id="p18" class="pageBlock">
-					<h2>よく使う「ブロック」をストック</h2>
-					<img><!--screenshot-->
 					<p>スタイルガイドジェネレータが便利</p>
 					<p>良かったら何かにお役立てください</p>
 				</section>
 
-				<section id="p19" class="pageBlock">
+				<section id="p17" class="pageBlock">
 					<h2>まとめ</h2>
 					<h3>ブロックに分割して、ブロックどうしは疎結合に</h3>
 					<h3>Let’s Repeat Yourself！</h3>
 					<ul class="mt20" style="text-align: left;">
 						<li>最初にブロックに分けておくと、進捗が把握しやすい</li>
-						<li>あとから追加・変更があっても対応しやすい</li>
-						<li>一定の品質を保証できる（技巧的ではないけど、それを求めるクライアントはほぼいない）</li>
+						<li>一定の品質を保てる（技巧的な最高品質は目指さない）</li>
+						<li>CSSの記述量が増えることは気にしない</li>
 						<li>案件をまたいだ使い回しもできる</li>
-						<li>Webアプリとの相性も◎</li>
 					</ul>
 				</section>
 
-				<section id="p20" class="pageBlock">
+				<section id="p18" class="pageBlock">
 					<div class="midBlock">
-						<h2>（AIに仕事を取られる日まで）ENJOY CSS!</h2>
-					</div>
-				</section>
-
-				<section id="p21" class="pageBlock">
-					<div class="midBlock">
-						<h1 class="sectionTitle">END</h1>
+						<h2>ENJOY CSS!</h2>
+						<div class="mt50">
+							<h3 style="text-align: right;">END</h3>
+						</div>
 					</div>
 				</section>
 			</div><!--/.slides-->
